--- a/index.html
+++ b/index.html
@@ -509,6 +509,708 @@ var AFSgeoJSON = {
               		"type": "Polygon",
               		"coordinates":  [[[-93.70171129703522, 32.43443813676175], [-93.70166301727295, 32.43431362769101], [-93.70149403810501, 32.43437022274447], [-93.70153963565825, 32.43446982995229], [-93.70156913995743, 32.43446077475612], [-93.7015825510025, 32.43448114894622], [-93.70171129703522, 32.43443813676175]]]}};
 
+var COEgeoJSON = {
+	"type": "Feature",
+      "properties": {},
+      "geometry": {
+        "type": "Polygon",
+        "coordinates": [
+          [
+            [
+              -93.70680259250297,
+              32.42754734153307
+            ],
+            [
+              -93.70681488022338,
+              32.427546832003586
+            ],
+            [
+              -93.70682704960589,
+              32.4275453083222
+            ],
+            [
+              -93.70683898345231,
+              32.427542785162856
+            ],
+            [
+              -93.70685056683286,
+              32.42753928682502
+            ],
+            [
+              -93.70686168819286,
+              32.42753484699973
+            ],
+            [
+              -93.7068722404273,
+              32.427529508445055
+            ],
+            [
+              -93.7068821219122,
+              32.42752332257436
+            ],
+            [
+              -93.70689123748336,
+              32.42751634896111
+            ],
+            [
+              -93.70689949935276,
+              32.42750865476519
+            ],
+            [
+              -93.70690682795414,
+              32.42750031408612
+            ],
+            [
+              -93.70691315270922,
+              32.42749140724933
+            ],
+            [
+              -93.7069184127073,
+              32.427482020032684
+            ],
+            [
+              -93.70692255729197,
+              32.42747224284036
+            ],
+            [
+              -93.70692554654899,
+              32.427462169832175
+            ],
+            [
+              -93.70692735169052,
+              32.427451898016784
+            ],
+            [
+              -93.70692795533247,
+              32.42744152631744
+            ],
+            [
+              -93.70692735166183,
+              32.42743115461927
+            ],
+            [
+              -93.7069255464927,
+              32.42742088280742
+            ],
+            [
+              -93.70692255721026,
+              32.42741080980497
+            ],
+            [
+              -93.70691841260329,
+              32.42740103262037
+            ],
+            [
+              -93.7069131525869,
+              32.42739164541313
+            ],
+            [
+              -93.70690682781826,
+              32.42738273858707
+            ],
+            [
+              -93.7068994992085,
+              32.427374397919635
+            ],
+            [
+              -93.70689123733627,
+              32.42736670373583
+            ],
+            [
+              -93.70688212176796,
+              32.42735973013469
+            ],
+            [
+              -93.70687224029142,
+              32.42735354427563
+            ],
+            [
+              -93.70686168807056,
+              32.4273482057317
+            ],
+            [
+              -93.70685056672885,
+              32.427343765915815
+            ],
+            [
+              -93.70683898337062,
+              32.4273402675857
+            ],
+            [
+              -93.7068270495496,
+              32.42733774443209
+            ],
+            [
+              -93.70681488019467,
+              32.42733622075423
+            ],
+            [
+              -93.70680259250297,
+              32.42733571122594
+            ],
+            [
+              -93.70679030481128,
+              32.42733622075423
+            ],
+            [
+              -93.70677813545635,
+              32.42733774443209
+            ],
+            [
+              -93.70676620163533,
+              32.4273402675857
+            ],
+            [
+              -93.7067546182771,
+              32.427343765915815
+            ],
+            [
+              -93.70674349693539,
+              32.4273482057317
+            ],
+            [
+              -93.70673294471452,
+              32.42735354427563
+            ],
+            [
+              -93.70672306323799,
+              32.42735973013469
+            ],
+            [
+              -93.70671394766968,
+              32.42736670373583
+            ],
+            [
+              -93.70670568579744,
+              32.427374397919635
+            ],
+            [
+              -93.70669835718769,
+              32.42738273858707
+            ],
+            [
+              -93.70669203241904,
+              32.42739164541313
+            ],
+            [
+              -93.70668677240266,
+              32.42740103262037
+            ],
+            [
+              -93.70668262779569,
+              32.42741080980497
+            ],
+            [
+              -93.70667963851325,
+              32.42742088280742
+            ],
+            [
+              -93.70667783334412,
+              32.42743115461927
+            ],
+            [
+              -93.70667722967349,
+              32.42744152631744
+            ],
+            [
+              -93.70667783331542,
+              32.427451898016784
+            ],
+            [
+              -93.70667963845695,
+              32.427462169832175
+            ],
+            [
+              -93.70668262771397,
+              32.42747224284036
+            ],
+            [
+              -93.70668677229865,
+              32.427482020032684
+            ],
+            [
+              -93.70669203229673,
+              32.42749140724933
+            ],
+            [
+              -93.7066983570518,
+              32.42750031408612
+            ],
+            [
+              -93.70670568565318,
+              32.42750865476519
+            ],
+            [
+              -93.70671394752259,
+              32.42751634896111
+            ],
+            [
+              -93.70672306309375,
+              32.42752332257436
+            ],
+            [
+              -93.70673294457863,
+              32.427529508445055
+            ],
+            [
+              -93.70674349681309,
+              32.42753484699973
+            ],
+            [
+              -93.7067546181731,
+              32.42753928682502
+            ],
+            [
+              -93.70676620155362,
+              32.427542785162856
+            ],
+            [
+              -93.70677813540006,
+              32.4275453083222
+            ],
+            [
+              -93.70679030478256,
+              32.427546832003586
+            ],
+            [
+              -93.70680259250297,
+              32.42754734153307
+            ]
+          ]
+        ]
+      }
+    };
+
+var TennisgeoJSON = {
+  "type": "FeatureCollection",
+  "features": [
+    {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.70077217700675,
+              32.428295735928714
+            ],
+            [
+              -93.70066258594595,
+              32.42797920583989
+            ],
+            [
+              -93.70030983972009,
+              32.428060145146404
+            ],
+            [
+              -93.70042114314106,
+              32.42838968300174
+            ],
+            [
+              -93.70077217700675,
+              32.428295735928714
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    },
+    {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.70037833413299,
+              32.428395464357024
+            ],
+            [
+              -93.70026018127099,
+              32.42807604393012
+            ],
+            [
+              -93.69990572268458,
+              32.42815264712165
+            ],
+            [
+              -93.70002558790715,
+              32.42848218463901
+            ],
+            [
+              -93.70037833413299,
+              32.428395464357024
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    },
+    {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.70065231178418,
+              32.42792572804345
+            ],
+            [
+              -93.70053929600306,
+              32.42760486060156
+            ],
+            [
+              -93.70017970033577,
+              32.427681464193995
+            ],
+            [
+              -93.70030299027906,
+              32.42801100343303
+            ],
+            [
+              -93.70065231178418,
+              32.42792572804345
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    },
+    {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.70024990710881,
+              32.42802256619177
+            ],
+            [
+              -93.70013860368826,
+              32.42770169909443
+            ],
+            [
+              -93.69978243274127,
+              32.42777974795243
+            ],
+            [
+              -93.69989887324313,
+              32.42810350545939
+            ],
+            [
+              -93.70024990710881,
+              32.42802256619177
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    }
+  ]
+};
+
+var baseballgeoJSON = {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.69920662039483,
+              32.426490256854024
+            ],
+            [
+              -93.69901364714474,
+              32.426333887366255
+            ],
+            [
+              -93.69816971131054,
+              32.42632954376438
+            ],
+            [
+              -93.69816971131054,
+              32.42638166697195
+            ],
+            [
+              -93.69792013272492,
+              32.426383838771926
+            ],
+            [
+              -93.69792013272492,
+              32.42711356050076
+            ],
+            [
+              -93.69797931115289,
+              32.42719391640193
+            ],
+            [
+              -93.6982031601038,
+              32.42736983038402
+            ],
+            [
+              -93.6983163710082,
+              32.42741326589169
+            ],
+            [
+              -93.69899306346096,
+              32.427421952990414
+            ],
+            [
+              -93.69901364726171,
+              32.42730902063825
+            ],
+            [
+              -93.699144868992,
+              32.427122247591214
+            ],
+            [
+              -93.699144868992,
+              32.426774761822884
+            ],
+            [
+              -93.69918603659349,
+              32.4267769336134
+            ],
+            [
+              -93.69920662039483,
+              32.426490256854024
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    };
+
+var softballgeoJSON = {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.69749044576098,
+              32.42655541330139
+            ],
+            [
+              -93.697294899653,
+              32.42654021073136
+            ],
+            [
+              -93.69701187239107,
+              32.42672698498379
+            ],
+            [
+              -93.696790596532,
+              32.42697674064688
+            ],
+            [
+              -93.69653072604632,
+              32.427133109058204
+            ],
+            [
+              -93.69654873687219,
+              32.42726124408168
+            ],
+            [
+              -93.69678545058167,
+              32.427500139402056
+            ],
+            [
+              -93.69708134271913,
+              32.42764130452154
+            ],
+            [
+              -93.69727946180198,
+              32.427673881056165
+            ],
+            [
+              -93.69765768914242,
+              32.427613071515395
+            ],
+            [
+              -93.6979510083044,
+              32.427448016840884
+            ],
+            [
+              -93.6980153326821,
+              32.42733291274429
+            ],
+            [
+              -93.6978300784748,
+              32.427133109058204
+            ],
+            [
+              -93.69770914864458,
+              32.426816028386455
+            ],
+            [
+              -93.69749044576098,
+              32.42655541330139
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    };
+
+var soccergeoJSON =  {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.70117234885032,
+              32.426118452517926
+            ],
+            [
+              -93.70113632719857,
+              32.4252844751439
+            ],
+            [
+              -93.69975206659224,
+              32.425332255306
+            ],
+            [
+              -93.69980352609441,
+              32.42616188862826
+            ],
+            [
+              -93.70117234885032,
+              32.426118452517926
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    };
+
+var intramuralgeoJSON = {
+      "type": "Feature",
+      "properties": {},
+      "geometry": {
+        "coordinates": [
+          [
+            [
+              -93.7029435688285,
+              32.431596230559165
+            ],
+            [
+              -93.70241616936204,
+              32.431080502691344
+            ],
+            [
+              -93.70307831567222,
+              32.43068408971925
+            ],
+            [
+              -93.70293972690938,
+              32.43054761927684
+            ],
+            [
+              -93.70247776436781,
+              32.43023568606051
+            ],
+            [
+              -93.70204659932381,
+              32.42991075445107
+            ],
+            [
+              -93.70160003553313,
+              32.429150409976586
+            ],
+            [
+              -93.70104952189794,
+              32.42813335333305
+            ],
+            [
+              -93.70072614811875,
+              32.42752246675171
+            ],
+            [
+              -93.70027958432804,
+              32.427113040450095
+            ],
+            [
+              -93.70003320430592,
+              32.42694407032316
+            ],
+            [
+              -93.69969443177497,
+              32.42724301725522
+            ],
+            [
+              -93.69912467797319,
+              32.42778241899383
+            ],
+            [
+              -93.69849332916615,
+              32.4283153187489
+            ],
+            [
+              -93.69779268643914,
+              32.42893269831454
+            ],
+            [
+              -93.69776958831193,
+              32.42903017896914
+            ],
+            [
+              -93.69794667395284,
+              32.42921864126906
+            ],
+            [
+              -93.69859342151167,
+              32.42979052445729
+            ],
+            [
+              -93.69927096657317,
+              32.43034290818474
+            ],
+            [
+              -93.69984072037491,
+              32.43086279566083
+            ],
+            [
+              -93.70042587292801,
+              32.43137618160276
+            ],
+            [
+              -93.70079544296162,
+              32.43160363013651
+            ],
+            [
+              -93.70123430737644,
+              32.43192205711895
+            ],
+            [
+              -93.70168087121348,
+              32.43218759410982
+            ],
+            [
+              -93.70185795685487,
+              32.43225257887896
+            ],
+            [
+              -93.70198884624179,
+              32.43216809867023
+            ],
+            [
+              -93.70262019504887,
+              32.4317521949491
+            ],
+            [
+              -93.7029435688285,
+              32.431596230559165
+            ]
+          ]
+        ],
+        "type": "Polygon"
+      }
+    };
+	    
 
 L.geoJSON(SLAgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Science Lecture <br>Auditorium</h4><h6>______________________</h6>").addTo(map)
 
@@ -549,6 +1251,18 @@ L.geoJSON(BCMgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#F
 
 L.geoJSON(AFSgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Anderson Field <br>Station (RRWMI)</h4><h6>______________________</h6><a href='https://www.lsus.edu/community/rrwmi' target='_blank' rel='noopener noreferrer'>Research and Outreach Station</a>").addTo(map)
 
+L.geoJSON(baseballgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1}).bindPopup("<h4>Pilot Field</h4><h6>______________________</h6><p>Baseball Field</p>").addTo(map)
+
+L.geoJSON(softballgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1}).bindPopup("<h4>LSUS Softball Field</h4><h6>______________________</h6><p>Softball Field</p>").addTo(map)
+
+L.geoJSON(soccergeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1}).bindPopup("<h4>The Swamp</h4><h6>______________________</h6><p>Soccer Fields</p>").addTo(map)
+
+L.geoJSON(COEgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).addTo(map)
+
+L.geoJSON(intramuralgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1}).addTo(map)
+
+L.geoJSON(tennisgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1}).addTo(map)
+	    
       //create background style
       var backgroundStyle = {
         "color": "#461D7C",
