--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@ var COEgeoJSON = {
       }
     };
 
-var TennisgeoJSON = {
+var tennisgeoJSON = {
   "type": "FeatureCollection",
   "features": [
     {
