--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@ L.geoJSON(COEgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#F
 
 L.geoJSON(intramuralgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1}).addTo(map)
 
-L.geoJSON(tennisgeoJSON , {'fillcolor': '#ffffff', 'fillopacity': 1.0, 'color': '#461D7C', 'opacity': 1, 'weight':0.25}).addTo(map)
+L.geoJSON(tennisgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#ffffff', 'opacity': 1, 'weight':0.25}).addTo(map)
 	    
       //create background style
       var backgroundStyle = {
