--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@ max-width: 300px;
       map.createPane('back');
       map.getPane('back').style.zIndex = 200;
       
-      //add imgs for building names, no labeling system works well for Leaflet
+      //add img for building names, no labeling system works well for Leaflet
       var labels = 'CML.PNG';
-      var labelbounds = [[32.42649826762586, -93.70753055608273], [32.42575904851094, -93.70142101669482]];
+      var labelbounds = [[32.43185220802694, -93.70852106489411], [32.425396730263934, -93.69586346693055]];
       L.imageOverlay(labels, labelbounds, {zIndex:300}).addTo(map);
 		    
       var abgeoJSON = {
