--- a/index.html
+++ b/index.html
@@ -1287,17 +1287,17 @@ L.geoJSON(BCMgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#F
 
 L.geoJSON(AFSgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Anderson Field <br>Station (RRWMI)</h4><h6>______________________</h6><a href='https://www.lsus.edu/community/rrwmi' target='_blank' rel='noopener noreferrer'>Research and Outreach Station</a>").addTo(map)
 
-L.geoJSON(baseballgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Pilot Field</h4><h6>______________________</h6><p>Baseball Field</p>").addTo(map)
+L.geoJSON(baseballgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#461D7C', 'opacity': 1}).bindPopup("<h4>Pilot Field</h4><h6>______________________</h6><p>Baseball Field</p>").addTo(map)
 
-L.geoJSON(softballgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>LSUS Softball Field</h4><h6>______________________</h6><p>Softball Field</p>").addTo(map)
+L.geoJSON(softballgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#461D7C', 'opacity': 1}).bindPopup("<h4>LSUS Softball Field</h4><h6>______________________</h6><p>Softball Field</p>").addTo(map)
 
-L.geoJSON(soccergeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>The Swamp</h4><h6>______________________</h6><p>Soccer Fields</p>").addTo(map)
+L.geoJSON(soccergeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#461D7C', 'opacity': 1}).bindPopup("<h4>The Swamp</h4><h6>______________________</h6><p>Soccer Fields</p>").addTo(map)
 
 L.geoJSON(COEgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).addTo(map)
 
-L.geoJSON(intramuralgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).addTo(map)
+L.geoJSON(intramuralgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#461D7C', 'opacity': 1}).addTo(map)
 
-L.geoJSON(tennisgeoJSON , {'fillcolor': '#461D7C', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1, 'weight':0.25}).addTo(map)
+L.geoJSON(tennisgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#461D7C', 'opacity': 1, 'weight':0.5}).addTo(map)
 	    
       //create background style
       var backgroundStyle = {
