--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ max-width: 300px;
       map.getPane('back').style.zIndex = 200;
       
       //add img for building names, no labeling system works well for Leaflet
-      var labels = 'Map_Labels.PNG';
-      var labelbounds = [[32.43272220802694, -93.70752106489411], [32.425506730263934, -93.69806346693055]];
+      var labels = 'MapLabels.PNG';
+      var labelbounds = [[32.43272220802694, -93.70752106489411], [32.425506730263934, -93.69826346693055]];
       L.imageOverlay(labels, labelbounds, {zIndex:300}).addTo(map);
 		    
       var abgeoJSON = {
