--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ max-width: 300px;
 
 .leaflet-popup-content img {
         display: block;
-        max-width: 85%;
+        width: 85%;
         height: auto;
         margin-left: auto;
         margin-right: auto;
