--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       .leaflet-popup-content-wrapper {
         background-color: #461D7C;
-max-width: 250px;
+width: 210px;
       }
 
       .leaflet-popup-tip {
@@ -1440,7 +1440,7 @@ L.geoJSON(COBgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#F
 
 L.geoJSON(UCgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>University Center</h4><h6>______________________</h6><a href = 'https://youtu.be/2FMMqT8VqSI?t=23' target='_blank' rel='noopener noreferrer'><img src= 'UC_vid.PNG' alt='University Center Front'</a><br><a href='https://lsus.bncollege.com/' target='_blank' rel='noopener noreferrer'>LSUS Bookstore</a><br><a href='https://www.lsus.edu/community/dice-office' target='_blank' rel='noopener noreferrer'>DICE Office</a><br><a href='https://lsus.presence.io/' target='_blank' rel='noopener noreferrer'>Student Activities</a><br><a href='https://www.lsus.edu/student-life/food-services' target='_blank' rel='noopener noreferrer'>The Port</a><br><p>UC Ballroom<br>UC Theater<br>Computer Lab<br>Food Pantry</p>").addTo(map)
 
-L.geoJSON(HPEgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Health & Physical Education</h4><h6>______________________</h6><a href = 'https://youtu.be/2FMMqT8VqSI?t=71'  target='_blank' rel='noopener noreferrer'><img src= 'HPE_vid.PNG' alt='Health and Physical Education Front'</a><br><a href='https://www.lsus.edu/academics/undergraduate-programs/public-health' target='_blank' rel='noopener noreferrer'>Kinesiology</a><br><p>Athletics<br>Human Performance Lab<br>The Dock (Basketball Court)<br>Dance Studio<br>Olympic Weightlifting Training Center</p>").addTo(map)
+L.geoJSON(HPEgeoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Health and Physical Education</h4><h6>______________________</h6><a href = 'https://youtu.be/2FMMqT8VqSI?t=71'  target='_blank' rel='noopener noreferrer'><img src= 'HPE_vid.PNG' alt='Health and Physical Education Front'</a><br><a href='https://www.lsus.edu/academics/undergraduate-programs/public-health' target='_blank' rel='noopener noreferrer'>Kinesiology</a><br><p>Athletics<br>Human Performance Lab<br>The Dock (Basketball Court)<br>Dance Studio<br>Olympic Weightlifting Training Center</p>").addTo(map)
 
 L.geoJSON(PHC1geoJSON , {'fillcolor': '#FDD023', 'fillopacity': 1.0, 'color': '#FDD023', 'opacity': 1}).bindPopup("<h4>Pioneer Heritage <br>Center</h4><h6>______________________</h6><a href='https://www.lsus.edu/community/pioneer-heritage-center' target='_blank' rel='noopener noreferrer'>Thrasher House</a>").addTo(map)
 
