--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ width: 210px;
       map.getPane('back').style.zIndex = 200;
       
       //add img for building names, no labeling system works well for Leaflet
-      var labels = 'CMLabels.PNG';
+      var labels = 'Labels.PNG';
       var labelbounds = [[32.43260220802694, -93.71022106489411], [32.425486730263934, -93.69806346693055]];
       L.imageOverlay(labels, labelbounds, {zIndex:300}).addTo(map);
 		    
