--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ blockquote.bubble {
 	line-height: 2;
 }
 blockquote.speech {
-  background: 'bubble.PNG'; 
+  background: "bubble.PNG"; 
   width: 35%;
   padding-top: 2%;
 	padding-bottom: 5%;
