--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ blockquote.speech {
   <blockquote id="locator" class="speech bubble">What can I help you find?</blockquote>
 </section>
 
-	  <img src = "rev.svg" alt = "Rev giving a thumbs up" class = "rev-img">
+	  <img src = "Rev.svg" alt = "Rev giving a thumbs up">
 
     <script>
           
