--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ blockquote.bubble {
 	line-height: 2;
 }
 blockquote.speech {
-  background: "bubble.PNG"; 
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/speech-bubble.svg); 
   width: 35%;
   padding-top: 2%;
 	padding-bottom: 5%;
