--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         display: block;
         max-width: 15%;
         height: auto;
-        margin-left: auto;
+        margin-left: 35%;
         margin-right: auto;
       }
 
