--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         display: block;
         max-width: 15%;
         height: auto;
-        margin-left: 35%;
+        margin-left: 25%;
         margin-right: auto;
       }
 
@@ -141,24 +141,19 @@ blockquote.bubble {
 	background-size: 100% 100%;
   margin: 0 auto;
 	text-align: center;
-	height: 1;
+	height: 0.5;
 	box-sizing: content-box;
-	line-height: 2;
+	line-height: 1;
+    padding: 5%;
 }
 blockquote.speech {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/speech-bubble.svg); 
-  width: 35%;
+  width: 60%;
   padding-top: 2%;
-	padding-bottom: 5%;
+	padding-bottom: 10%;
 }
 
-		.rev-img {
-        display: block;
-        max-width: 15%;
-        height: auto;
-        margin-left: auto;
-        margin-right: auto;
-      }
+		
 
 	@media screen and (orientation: landscape, max-height: 550px) {
         h1 {
