--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ blockquote.bubble {
 }
 blockquote.speech {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/speech-bubble.svg); 
-  width: 60%;
+  max-width: 30%;
   padding-top: 2%;
 	padding-bottom: 10%;
 }
