--- a/index.html
+++ b/index.html
@@ -2227,7 +2227,7 @@ L.geoJSON(ppageoJSON , {'fillcolor': '#ffffff', 'fillopacity': 1.0, 'color': '#f
       function myFunction() {
   		var x = document.getElementById("locationSelect");
   		var i = x.selectedIndex;
-  		document.getElementById("locator").innerHTML = "<p>" + x.options[i].value + "</p>;
+  		document.getElementById("locator").innerHTML = x.options[i].value;
 }
 
     </script>
