--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       #map {
         resize: horizontal;
         max-width: 90%;
-        height: calc(40vh - 16px);
+        height: calc(70vh - 12px);
         border: 3px solid #FDD023;
         margin-left: auto;
         margin-right: auto;
@@ -119,13 +119,6 @@ width: 210px;
         padding: 1px;
       }
 
-     
-@font-face {
-		font-family: 'Oswald';
-		font-style: normal;
-		font-weight: 400;
-		}
-	
 section { 
   display: flex;
   justify-content: center;
@@ -150,7 +143,10 @@ blockquote.speech {
 	padding-bottom: 8%;
 }
 
-#warning-message { display: none; }
+#warning-message { display: none; 
+		 color: white;
+		 margin-left:auto;
+		 margin-right:auto;}
     @media only screen and (orientation:portrait){
         #wrapper { display:none; }
         #warning-message { display:block; }
@@ -226,7 +222,7 @@ blockquote.speech {
 	  <img src = "Rev.svg" alt = "Rev giving a thumbs up">
 </div>
 <div id="warning-message">
-    This website is only viewable in landscape mode.
+    Please rotate your device's screen to landscape mode to view this site.
 </div>
 
     <script>
