--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ blockquote.speech {
 	  <img src = "Rev.svg" alt = "Rev giving a thumbs up">
 </div>
 <div id="warning-message">
-    Please rotate your device's screen to landscape mode to view this site.
+    Please rotate your device's screen to landscape mode and refresh the page to view this site.
 </div>
 
     <script>
