--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ blockquote.speech {
 
 #warning-message { display: none; 
 		 color: white;
+		 text-align: center;
 		 margin-left:auto;
 		 margin-right:auto;}
     @media only screen and (orientation:portrait){
