--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ width: 210px;
       }
 
       .center {
-        margin: auto;
+        margin-left: auto;
+	margin-right:auto;
         width:350px;
         padding: 1px;
       }
