--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ blockquote.speech {
 <option value="Business & Education Building Room 301">Department of Management and Marketing </option>
 <option value="Bronson Hall Room 330">Department of Mathematics </option>
 <option value="Business & Education Building Room 348">Department of Psychology </option>
-<option value="Technology Center Room 133">Division of Continuing Education and Public Service</option>
+<option value="Technology Center Room 133">Division of Continuing Education</option>
 <option value="Administration Building Room 159">Financial Aid</option>
 <option value="Administration Building Room 249">Graduate Studies Office</option>
 <option value="Administration Building Room 202">Information Technology Services</option>
@@ -215,7 +215,6 @@ blockquote.speech {
 
   </select>
 </form>
-<br>
 
 <section>
   <blockquote id="locator" class="speech bubble">What can I help you find?</blockquote>
